# youth-missionary-game

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.example  Dockerfile  README.md  TESTING.md  dummy_data.sql  fly.toml  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  test.yml
src/: Dashboard.py  database.py  utils.py
src/pages/: 1_📁_Dados_da_Gincana.py  2_📝_Registro_das_Tarefas.py  Data.py  Register.py
tests/: README.md  test_dashboard.py  test_database.py  test_dummy_data.py  test_integration.py  test_organization_feature_simple.py  test_organization_integration.py  test_pages.py  test_streamlit_coverage.py  test_utils.py
